--- a/ui/package.json
+++ b/ui/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@mui/x-date-pickers": "^6.19.2",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "next-intl": "^3.5.3",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next-auth": "^4.24.5"
+    "react-hook-form": "^7.49.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
