--- a/ui/package.json
+++ b/ui/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/material-nextjs": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.2",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
@@ -22,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "user-agent": "^1.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
