--- a/ui/package.json
+++ b/ui/package.json
@@ -2,8 +2,9 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "start:dev": "open http://localhost:3000 && next dev",
+    "start:dev": "start http://localhost:3000 && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,6 +18,7 @@
     "@mui/material-nextjs": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.2",
     "dayjs": "^1.11.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-intl": "^3.5.3",
@@ -28,6 +30,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
