chore: Update language strings to Spanish

--- a/ui/package.json
+++ b/ui/package.json
@@ -19,8 +19,10 @@
     "@mui/material": "^5.15.6",
     "@mui/material-nextjs": "^5.15.6",
     "@mui/x-date-pickers": "^6.19.2",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "jsonwebtoken": "^9.0.2",
+    "mui-tel-input": "^5.1.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-intl": "^3.5.3",
@@ -28,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-number-format": "^5.3.4",
     "user-agent": "^1.0.4",
     "zod": "^3.22.4"
   },
