--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/material-nextjs": "^5.15.6",
@@ -32,7 +33,8 @@
     "react-hook-form": "^7.49.3",
     "react-number-format": "^5.3.4",
     "user-agent": "^1.0.4",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.12",
