--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/material-nextjs": "^5.15.6",
+    "@mui/x-charts": "^7.10.0",
     "@mui/x-date-pickers": "^6.19.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
