--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,11 @@
     "@mui/material-nextjs": "^5.15.6",
     "@mui/x-charts": "^7.10.0",
     "@mui/x-date-pickers": "^6.19.2",
+    "@tiptap/extension-placeholder": "^2.5.5",
+    "@tiptap/extension-underline": "^2.5.5",
+    "@tiptap/pm": "^2.5.5",
+    "@tiptap/react": "^2.5.5",
+    "@tiptap/starter-kit": "^2.5.5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "jsonwebtoken": "^9.0.2",
