feat: Add lazy loading for images in login page

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -16,6 +16,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "@testing-library/jest-dom"
+    ],
     "plugins": [
       {
         "name": "next"
@@ -24,6 +27,12 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
+      "@/actions/*": [
+        "./src/actions/*"
       ]
     }
   },
@@ -31,8 +40,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/components/Common/Switch"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
