--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -52,6 +54,9 @@
     "@storybook/nextjs": "^7.6.12",
     "@storybook/react": "^7.6.12",
     "@storybook/test": "^7.6.12",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -61,6 +66,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-storybook": "^0.6.15",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "storybook": "^7.6.12",
     "typescript": "^5"
   }
