feat: Add lazy loading for images in login page

--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,4 +1,13 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "none",
+  "printWidth": 110,
+  "endOfLine": "auto",
+  "semi": false,
+  "useTabs": true,
+  "tabWidth": 4,
+  "plugins": [
+    "./node_modules/prettier-plugin-packagejson/lib/index.js",
+    "./node_modules/prettier-plugin-organize-imports/index.js"
+  ]
 }
