--- a/backend/libs/attachment/tsconfig.lib.json
+++ b/backend/libs/attachment/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "../../dist/libs/auth"
+    "outDir": "../../dist/libs/attachment"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
