--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:create": "npx typeorm-ts-node-commonjs migration:create",
+    "typeorm:generate": "npx typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/init",
+    "typeorm:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
+    "typeorm:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
+    "typeorm:seed:dev": "pnpm run build && npx typeorm-extension seed:run -d src/database/data-source.ts",
+    "typeorm:seed": "npx typeorm-extension seed:run -d src/database/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -32,20 +39,27 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dot": "^1.1.3",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
+    "puppeteer": "^23.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/dot": "^1.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/pdfkit": "^0.13.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
