feat: Actualizar .gitignore y agregar directorio de datos
Se actualizaron las reglas del archivo .gitignore para incluir el archivo .env y se agregó el directorio /data.

Se modificaron los siguientes archivos:
- backend/.gitignore

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,6 +18,12 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@app/": [
+        "src/"
+      ],
+      "@app/*": [
+        "src/*"
+      ],
       "@app/attachment": [
         "libs/attachment/src"
       ],
