--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "typeorm:seed": "npx typeorm-extension seed:run -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
