--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,6 +17,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "resolveJsonModule": true,
     "paths": {
       "@app/": [
         "src/"
@@ -43,5 +44,8 @@
         "libs/mail/src/*"
       ]
     }
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
 }
