feat: Agregar configuración de Husky y lint-staged
Se agregó la configuración de Husky y lint-staged al archivo .husky/pre-commit para ejecutar los tests antes de hacer un commit. También se corrigió un error de formato en el archivo package.json del backend.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,18 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --findRelatedTests \"src/**/*.spec.ts\" \"lib/**/*.spec.ts\"",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:create": "npx typeorm-ts-node-commonjs migration:create",
-    "typeorm:generate": "npx typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/init",
-    "typeorm:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
-    "typeorm:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
-    "typeorm:seed:dev": "pnpm run build && npx typeorm-extension seed:run -d src/database/data-source.ts",
-    "typeorm:seed": "npx typeorm-extension seed:run -d src/database/data-source.ts"
+    "typeorm:create": "pnpm exec typeorm-ts-node-commonjs migration:create",
+    "typeorm:generate": "pnpm exec typeorm-ts-node-commonjs migration:generate -d ./src/database/data-source.ts ./src/database/migrations/init",
+    "typeorm:run": "pnpm exec typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts",
+    "typeorm:revert": "pnpm exec typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
+    "typeorm:seed:dev": "pnpm run build && pnpm exec typeorm-extension seed:run -d src/database/data-source.ts",
+    "typeorm:seed": "pnpm exec typeorm-extension seed:run -d src/database/data-source.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
