--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "backend:start:dev": "pnpm --filter backend -r start:dev",
     "lint": "pnpm --stream -r lint",
     "format": "pnpm --stream -r format",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "pnpm --stream -r test",
     "prepare": "husky"
   },
   "keywords": [],
