--- a/ui/package.json
+++ b/ui/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "ui",
-  "version": "0.1.0",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "start:dev": "next dev & (sleep 1 && (open http://localhost:3000 || start http://localhost:3000))",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --fix",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
-  "dependencies": {
-    "@emotion/cache": "^11.13.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@mui/base": "5.0.0-beta.40",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/material": "^6.1.0",
-    "@mui/material-nextjs": "^6.1.0",
-    "@mui/x-charts": "^7.17.0",
-    "@mui/x-date-pickers": "^7.17.0",
-    "@tiptap/extension-placeholder": "^2.6.6",
-    "@tiptap/extension-underline": "^2.6.6",
-    "@tiptap/pm": "^2.6.6",
-    "@tiptap/react": "^2.6.6",
-    "@tiptap/starter-kit": "^2.6.6",
-    "classnames": "^2.5.1",
-    "dayjs": "^1.11.13",
-    "jsonwebtoken": "^9.0.2",
-    "mui-tel-input": "^6.0.1",
-    "next": "14.2.11",
-    "next-auth": "^4.24.7",
-    "next-intl": "^3.19.1",
-    "notistack": "^3.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-number-format": "^5.4.2",
-    "user-agent": "^1.0.4",
-    "zod": "^3.23.8",
-    "zod-i18n-map": "^2.27.0"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^8.3.1",
-    "@storybook/addon-interactions": "^8.3.1",
-    "@storybook/addon-links": "^8.3.1",
-    "@storybook/addon-onboarding": "8.3.1",
-    "@storybook/blocks": "^8.3.1",
-    "@storybook/nextjs": "^8.3.1",
-    "@storybook/react": "^8.3.1",
-    "@storybook/test": "^8.3.1",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.13",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.6",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.10.0",
-    "eslint-config-next": "14.2.11",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-storybook": "^0.8.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-packagejson": "^2.5.2",
-    "storybook": "^8.3.1",
-    "typescript": "^5.6.2"
-  }
+	"name": "ui",
+	"version": "0.1.0",
+	"private": true,
+	"license": "UNLICENSED",
+	"scripts": {
+		"build": "next build",
+		"build-storybook": "storybook build",
+		"lint": "next lint --fix",
+		"start": "next start",
+		"start:dev": "next dev & (sleep 1 && (open http://localhost:3000 || start http://localhost:3000))",
+		"storybook": "storybook dev -p 6006",
+		"test": "jest --findRelatedTests \"src/**/*.test.tsx\" \"test/**/*.test.ts\"",
+		"test:watch": "jest --watch"
+	},
+	"dependencies": {
+		"@emotion/cache": "^11.13.1",
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
+		"@hookform/resolvers": "^3.9.0",
+		"@mui/base": "5.0.0-beta.40",
+		"@mui/icons-material": "^6.1.0",
+		"@mui/material": "^6.1.0",
+		"@mui/material-nextjs": "^6.1.0",
+		"@mui/x-charts": "^7.17.0",
+		"@mui/x-date-pickers": "^7.17.0",
+		"@tiptap/extension-placeholder": "^2.6.6",
+		"@tiptap/extension-underline": "^2.6.6",
+		"@tiptap/pm": "^2.6.6",
+		"@tiptap/react": "^2.6.6",
+		"@tiptap/starter-kit": "^2.6.6",
+		"classnames": "^2.5.1",
+		"dayjs": "^1.11.13",
+		"jsonwebtoken": "^9.0.2",
+		"mui-tel-input": "^6.0.1",
+		"next": "14.2.11",
+		"next-auth": "^4.24.7",
+		"next-intl": "^3.19.1",
+		"notistack": "^3.0.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.0",
+		"react-number-format": "^5.4.2",
+		"user-agent": "^1.0.4",
+		"zod": "^3.23.8",
+		"zod-i18n-map": "^2.27.0"
+	},
+	"devDependencies": {
+		"@storybook/addon-essentials": "^8.3.1",
+		"@storybook/addon-interactions": "^8.3.1",
+		"@storybook/addon-links": "^8.3.1",
+		"@storybook/addon-onboarding": "8.3.1",
+		"@storybook/blocks": "^8.3.1",
+		"@storybook/nextjs": "^8.3.1",
+		"@storybook/react": "^8.3.1",
+		"@storybook/test": "^8.3.1",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
+		"@types/jest": "^29.5.13",
+		"@types/jsonwebtoken": "^9.0.7",
+		"@types/node": "^22.5.5",
+		"@types/react": "^18.3.6",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^9.10.0",
+		"eslint-config-next": "14.2.11",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-storybook": "^0.8.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"prettier-plugin-organize-imports": "^4.0.0",
+		"prettier-plugin-packagejson": "^2.5.2",
+		"storybook": "^8.3.1",
+		"typescript": "^5.6.2"
+	}
 }
