--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
     "puppeteer": "^23.2.0",
@@ -61,6 +62,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pdfkit": "^0.13.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
