--- a/backend/package.json
+++ b/backend/package.json
@@ -36,10 +36,10 @@
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.2",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.0",
-    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -47,6 +47,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "multer": "1.4.5-lts.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.15.0",
@@ -64,6 +65,7 @@
     "@types/dot": "^1.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
