--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
 		"@tiptap/pm": "^2.6.6",
 		"@tiptap/react": "^2.6.6",
 		"@tiptap/starter-kit": "^2.6.6",
+		"axios": "^1.7.7",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"jsonwebtoken": "^9.0.2",
