--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,7 @@
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
 		"mui-tel-input": "^6.0.1",
 		"next": "14.2.11",
 		"next-auth": "^4.24.7",
