--- a/ui/package.json
+++ b/ui/package.json
@@ -8,13 +8,13 @@
 		"build-storybook": "storybook build",
 		"lint": "next lint --fix",
 		"start": "next start",
-		"start:dev": "next dev & (sleep 1 && (open http://localhost:3000 || start http://localhost:3000))",
+		"start:dev": "next dev & (sleep 1 && (start http://localhost:3000 || open http://localhost:3000))",
 		"storybook": "storybook dev -p 6006",
 		"test": "jest --findRelatedTests \"src/**/*.test.tsx\" \"test/**/*.test.ts\"",
 		"test:watch": "jest --watch"
 	},
 	"dependencies": {
-		"@emotion/cache": "^11.13.1",
+		"@emotion/cache": "^11.13.0",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@hookform/resolvers": "^3.9.0",
