--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
 		"@emotion/cache": "^11.13.0",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
+		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@mui/base": "5.0.0-beta.58",
 		"@mui/icons-material": "^6.1.0",
