--- a/ui/.prettierrc
+++ b/ui/.prettierrc
@@ -1,7 +1,8 @@
 {
 	"singleQuote": true,
 	"trailingComma": "none",
-	"printWidth": 110,
+	"printWidth": 60,
+	"jsxBracketSameLine": false,
 	"endOfLine": "auto",
 	"semi": false,
 	"tabWidth": 2,
