--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -5,7 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "jsxImportSource": "@emotion/react",
+    /* "jsxImportSource": "@emotion/react", */
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
