--- a/ui/package.json
+++ b/ui/package.json
@@ -44,6 +44,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
 		"react-number-format": "^5.4.2",
+		"swr": "^2.2.5",
 		"user-agent": "^1.0.4",
 		"zod": "^3.23.8",
 		"zod-i18n-map": "^2.27.0"
