--- a/ui/package.json
+++ b/ui/package.json
@@ -37,7 +37,7 @@
 		"jwt-decode": "^4.0.0",
 		"mui-tel-input": "^6.0.1",
 		"next": "14.2.13",
-		"next-auth": "^4.24.8",
+		"next-auth": "5.0.0-beta.25",
 		"next-intl": "^3.20.0",
 		"notistack": "^3.0.1",
 		"react": "^18.3.1",
