--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@nestjs/platform-express": "^10.4.2",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.0",
+    "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
