--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,7 @@
 		"build-storybook": "storybook build",
 		"lint": "next lint --fix",
 		"start": "next start",
-		"start:dev": "next dev & sleep 1 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
+		"dev": "next dev & sleep 1 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
 		"storybook": "storybook dev -p 6006",
 		"test": "jest --findRelatedTests \"src/**/*.test.tsx\" \"test/**/*.test.ts\"",
 		"test:watch": "jest --watch"
