--- a/ui-v2/tsconfig.json
+++ b/ui-v2/tsconfig.json
@@ -31,7 +31,13 @@
       ],
       "@/actions/*": [
         "./src/actions/*"
-      ]
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
+      ],
     }
   },
   "include": [
