--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:dev": "next dev & sleep 3 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
+    "kill": "lsof -i :3000 -t >/dev/null && lsof -i :3000 -t | xargs kill",
+    "dev": "pnpm run kill; next dev",  
+    "start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "nex:lint": "next lint --fix"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
