--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "kill": "lsof -i :3000 -t >/dev/null && lsof -i :3000 -t | xargs kill",
-    "dev": "pnpm run kill; next dev",  
+    "dev": "pnpm run kill; next dev",
     "start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
     "build": "next build",
     "start": "next start",
@@ -15,6 +15,7 @@
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
