--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "ui-v2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "kill": "lsof -i :3000 -t >/dev/null && lsof -i :3000 -t | xargs kill",
-    "dev": "pnpm run kill; next dev",
-    "start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (start http://localhost:3000 || open http://localhost:3000 || xdg-open http://localhost:3000)",
-    "build": "next build",
-    "start": "next start",
-    "nex:lint": "next lint --fix"
-  },
-  "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.468.0",
-    "next": "15.1.2",
-    "next-intl": "^3.26.2",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-storybook": "^0.11.1",
-    "jest": "^29.7.0",
-    "postcss": "^8",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-packagejson": "^2.5.6",
-    "storybook": "^8.4.7",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "ui-v2",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "pnpm run kill; next dev",
+		"kill": "lsof -i :3000 -t >/dev/null && lsof -i :3000 -t | xargs kill",
+		"nex:lint": "next lint --fix",
+		"start": "next start",
+		"start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (open http://localhost:3000 || xdg-open http://localhost:3000)"
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-collapsible": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.6",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.468.0",
+		"next": "15.1.2",
+		"next-intl": "^3.26.2",
+		"next-themes": "^0.4.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.2",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-storybook": "^0.11.1",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"jest": "^29.7.0",
+		"postcss": "^8",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-packagejson": "^2.5.6",
+		"storybook": "^8.4.7",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
