Agregar componente de selección principal; actualizar traducciones y mejorar la estructura de los elementos de entrada.

--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -11,6 +11,7 @@
 		"start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (open http://localhost:3000 || xdg-open http://localhost:3000)"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-collapsible": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -28,8 +29,10 @@
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
 		"tailwind-merge": "^2.5.5",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
