--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -11,6 +11,7 @@
 		"start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (open http://localhost:3000 || xdg-open http://localhost:3000)"
 	},
 	"dependencies": {
+		"@hello-pangea/dnd": "^17.0.0",
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.4",
@@ -38,6 +39,11 @@
 		"@radix-ui/react-toggle": "^1.1.1",
 		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"@tanstack/react-table": "^8.20.6",
+		"@tiptap/extension-placeholder": "^2.11.0",
+		"@tiptap/extension-underline": "^2.11.0",
+		"@tiptap/react": "^2.11.0",
+		"@tiptap/starter-kit": "^2.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
@@ -77,5 +83,8 @@
 		"storybook": "^8.4.7",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
+	},
+	"overrides": {
+		"react-is": "^19.0.0-rc-69d4b800-20241021"
 	}
 }
