--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -15,6 +15,7 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.4",
+		"@radix-ui/react-aspect-ratio": "^1.1.1",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-collapsible": "^1.1.2",
@@ -39,6 +40,7 @@
 		"@radix-ui/react-toggle": "^1.1.1",
 		"@radix-ui/react-toggle-group": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"@radix-ui/react-visually-hidden": "^1.1.1",
 		"@tanstack/react-table": "^8.20.6",
 		"@tiptap/extension-placeholder": "^2.11.0",
 		"@tiptap/extension-underline": "^2.11.0",
@@ -83,8 +85,5 @@
 		"storybook": "^8.4.7",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
-	},
-	"overrides": {
-		"react-is": "^19.0.0-rc-69d4b800-20241021"
 	}
 }
