--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -46,6 +46,7 @@
 		"@tiptap/extension-underline": "^2.11.0",
 		"@tiptap/react": "^2.11.0",
 		"@tiptap/starter-kit": "^2.11.0",
+		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
@@ -53,6 +54,7 @@
 		"embla-carousel-react": "^8.5.1",
 		"lucide-react": "^0.468.0",
 		"next": "15.1.2",
+		"next-auth": "5.0.0-beta.25",
 		"next-intl": "^3.26.2",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
