--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -71,6 +71,7 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
@@ -85,7 +86,7 @@
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-packagejson": "^2.5.6",
 		"storybook": "^8.4.7",
-		"tailwindcss": "^3.4.1",
+		"tailwindcss": "^4.0.0",
 		"typescript": "^5"
 	}
 }
