--- a/backend/package.json
+++ b/backend/package.json
@@ -57,7 +57,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "typeorm-extension": "^3.6.1"
+    "typeorm-extension": "^3.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -77,6 +78,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
