Agregar soporte para verificación de usuarios no verificados; incluir nueva variable de entorno para expiración de JWT y actualizar estrategias de autenticación.

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -27,3 +27,4 @@ DESTINATION_PATH=string_example
 URL_FRONTEND=string_example
 FLAG_METHOD_VERIFY=string_example
 PORT=string_example
+JWT_VERIFY_EXPIRATION_IN=string_example
