--- a/backend/package.json
+++ b/backend/package.json
@@ -65,6 +65,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/dot": "^1.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
