--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -6,9 +6,15 @@
 		"build": "next build",
 		"dev": "pnpm run kill; next dev",
 		"kill": "lsof -i :3000 -t >/dev/null && lsof -i :3000 -t | xargs kill",
-		"nex:lint": "next lint --fix",
+		"lint": "next lint --fix",
 		"start": "next start",
 		"start:dev": "pnpm run kill & sleep 1 &  next dev & sleep 3 && (open http://localhost:3000 || xdg-open http://localhost:3000)"
+	},
+	"lint-staged": {
+		"**/*.{js,ts,tsx}": [
+			"prettier --write",
+			"eslint --fix"
+		]
 	},
 	"dependencies": {
 		"@hello-pangea/dnd": "^17.0.0",
@@ -53,7 +59,7 @@
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.1",
 		"lucide-react": "^0.468.0",
-		"next": "15.1.2",
+		"next": "15.1.7",
 		"next-auth": "5.0.0-beta.25",
 		"next-intl": "^3.26.2",
 		"next-themes": "^0.4.4",
@@ -76,9 +82,9 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.2",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-config-next": "15.1.7",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.3",
 		"eslint-plugin-storybook": "^0.11.1",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"jest": "^29.7.0",
