--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -77,6 +77,7 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@next/eslint-plugin-next": "^15.1.7",
 		"@tailwindcss/postcss": "^4.0.0",
 		"@types/node": "^20",
 		"@types/react": "^19",
@@ -85,10 +86,12 @@
 		"eslint-config-next": "15.1.7",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.3",
+		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-storybook": "^0.11.1",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"jest": "^29.7.0",
 		"postcss": "^8",
+		"prettier": "^3.0.0",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-packagejson": "^2.5.6",
 		"storybook": "^8.4.7",
