--- a/ui-v2/package.json
+++ b/ui-v2/package.json
@@ -58,6 +58,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
 		"embla-carousel-react": "^8.5.1",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.468.0",
 		"next": "15.1.7",
 		"next-auth": "5.0.0-beta.25",
